--- a/src/App.css
+++ b/src/App.css
@@ -1,83 +1,94 @@
 .App {
-  
-    
-    
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.landing-header {
-  background: transparent;
-  background-color: transparent;
-  border-color: transparent;
-  height: 150px;
-  padding: 0px;
-  color: transparent;
+#Background {
+    height: 800px;
+    width:100%;
+    position: absolute;
+    z-index: 1;
 }
 
 .nav-bar {
-    /* Library: */
-font-family: AvenirNext-Bold;
-font-size: 24px;
-color: rgba(255,255,255,0.87);
-letter-spacing: 0.25px;
-    /* SoundFusion: */
-font-family: AvenirNext-Bold;
+position: absolute;
+/* SoundFusion: */
+font-family: AvenirNext-medium;
 font-size: 36px;
 color: rgba(255,255,255,0.87);
 letter-spacing: 0.25px;
-    /* Rectangle: */
-background: rgba(216,216,216,0.00);
-    float: top-left;
+z-index: 2;
+width: 100%;
 }
 
-.App-intro {
-  font-size: large;
+.soundfusion {
+/* SoundFusion: */
+font-family: AvenirNext-bold;
+font-size: 28px;
+color: rgba(255,255,255,0.87);
+letter-spacing: 0.25px;
+width: 20%;
+float: left;
+text-align: center;
+text-decoration: none !important;
 }
 
-.header-title {
-  font-size: 1.5em;
+.library {
+/* Library: */
+font-family: AvenirNext-medium;
+font-size: 18px;
+color: rgba(255,255,255,0.87);
+letter-spacing: 0.25px;
+position: relative;
+width: 10%;
+float: right;
+text-align: center;
+text-decoration: none !important;
 }
 
+.selling-points-container {
+padding: 50px;
+position: absolute;
+    
+}
 
 .point1 {
-    /* Mobile enabled Liste: */
-font-family: AvenirNext-medium;
+ /* Mobile enabled Liste: */
+font-family: AvenirNext-Bold;
 font-size: 18px;
 color: #5E5E5E;
-letter-spacing: 0.25px;
-text-align: center;
-float: left;
+letter-spacing: 0.25px; 
 width: 33%;
+float: left;
+text-align: center;
+position: relative;
+padding-top: 800px
 }
-
 
 .point2 {
-/* Unlimited, streaming: */
-font-family: AvenirNext-medium;
+ /* Unlimited, streaming: */
+font-family: AvenirNext-Bold;
 font-size: 18px;
 color: #5E5E5E;
 letter-spacing: 0.25px;
-text-align: center;
-    text-align-last: center;
-float: left;
 width: 33%;
-    }
- 
-.point3 {
-/* Mobile enabled Liste: */
-font-family: AvenirNext-medium;
-font-size: 18px;
-color: #5E5E5E;
-letter-spacing: 0.25px;
-text-align: center;
 float: left;
-width: 33%;
+text-align: center;
+position: relative;
+padding-top: 800px
 }
 
+.point3 {
+  /* Choose your music Wh: */
+font-family: AvenirNext-Bold;
+font-size: 18px;
+color: #5E5E5E;
+letter-spacing: 0.25px;
+width: 33%;
+float: left;
+text-align: center;
+position: relative;
+padding-top: 800px;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
