--- a/src/App.css
+++ b/src/App.css
@@ -1,115 +1,153 @@
-.App {
-
+div.wrapper {
+    float: left;
+    position: relative;
 }
+  
+
+div.landing-tagline {
+    position: absolute;
+    bottom: 35%;
+    left: 66%;
+    width: 100%;
+    background-color: transparent;
+    color: white;
+    display: flex;
+}
+
+
+.landing-tagline-text {
+    display: block;
+    flex-direction: column;
+    top: 55%;
+    right: 0px;
+    left: 70%;
+    margin: 0px;
+    font-size: 36px;
+    font-family: AvenirNext-bold;
+    letter-spacing: .50px;
+}
+
 
 .landing-background {
+    display: block;
     height: 750px;
-    width:100%;
-    position: absolute;
+    width: 100%;
+    position: relative;
     z-index: 1;
-    background-image: url("http://i64.tinypic.com/vgle1s.jpg");
+    flex-direction: column;
 }
 
+
 #nav-bar {
-position: absolute;
-/* SoundFusion: */
-font-family: AvenirNext-medium;
-font-size: 36px;
-color: rgba(255,255,255,0.87);
-letter-spacing: 0.25px;
-z-index: 2;
-width: 100%;
+    position: fixed;
+    font-family: AvenirNext-medium;
+    letter-spacing: 0.25px;
+    z-index: 2;
+    width: 99%;
 }
+
 
 .topleft {
 /* SoundFusion: */
-font-family: AvenirNext-bold;
-font-size: 28px;
-color: rgba(255,255,255,0.87);
-letter-spacing: 0.25px;
-width: 20%;
-float: left;
-text-align: center;
-border: none;
-text-decoration: none !important;
+    font-family: AvenirNext-bold;
+    font-size: 24px;
+    width: 19%;
+    float: left;
+    text-align: center;
 }
+
 
 .topright {
 /* Library: */
-font-family: AvenirNext-medium;
-font-size: 18px;
-color: rgba(255,255,255,0.87);
-letter-spacing: 0.25px;
-position: relative;
-width: 10%;
-float: right;
-text-align: center;
-text-decoration: none !important;
+    font-family: AvenirNext-medium;
+    font-size: 18px;
+    position: fixed;
+    width: 99%;
+    float: right;
+    text-align: right;
 }
 
-.selling-points-container {
-padding: 20px;
-position: absolute;
+
+.point1, .point2, .point3 {
+    letter-spacing: 0.25px; 
+    width: 33%;
+    float: left;
+    text-align: center;
+    position: relative;
+    display: flex;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex: 100%;
+    max-width: 33%;
+    padding-top: 10%;
+    padding-bottom: 10%; 
 }
 
-.point1 {
- /* Mobile enabled Liste: */
-font-family: AvenirNext-medium;
-font-size: 18px;
-color: #5E5E5E;
-letter-spacing: 0.25px; 
-width: 33%;
-float: left;
-text-align: center;
-position: relative;
-padding-top: 800px;
-padding-bottom: 50px;
-}
 
-.point-title1 {
+.point-title1, .point-title2, .point-title3 {
     font-family: AvenirNext-Bold;
     font-size: 20px;
+    color: #5E5E5E;
 }
 
-.point2 {
- /* Unlimited, streaming: */
-font-family: AvenirNext-medium;
+
+.point-description1, .point-description2, .point-description3 {
+font-family: AvenirNext-Bold;
 font-size: 18px;
 color: #5E5E5E;
-letter-spacing: 0.25px;
-width: 33%;
-float: left;
-text-align: center;
-position: relative;
-padding-top: 800px;
-padding-bottom: 50px;
 }
 
-.point-title2 {
-    font-family: AvenirNext-Bold;
-    font-size: 20px;
+
+.library-details {
+    color: rgba(142,141,142,0.87);
+    letter-spacing: 0.25px;
+    font-family: AvenirNext-medium;
+    display: flex;
+    flex-direction: row;
+    flex: 100%;
+    max-width: 33%;
 }
 
-.point3 {
-  /* Choose your music Wh: */
-font-family: AvenirNext-medium;
-font-size: 18px;
-color: #5E5E5E;
-letter-spacing: 0.25px;
-width: 33%;
-float: left;
-text-align: center;
-position: relative;
-padding-top: 800px;
-padding-bottom: 50px;
+
+.library-title {
+/* ALBUMS Discover a ne: */
+    font-size: 28px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 55%;
+    padding-left: 1%;
+    padding-right: 66%;
+    position: fixed; 
 }
 
-.point-title3 {
-    font-family: AvenirNext-Bold;
-    font-size: 20px;
+
+.library-text {
+/* ALBUMS Discover a ne: */
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 60%;
+    padding-left: 1%;
+    padding-right: 66%;
+    position: fixed;  
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+
+.library-list {
+    display: flex;
+    flex-direction: column;
+    flex: 99%;
+    max-width: 99%;
+    justify-content: center;
+    left: 40%;
+    right: 60%;
+    position: absolute;
+    height: 850px;
+    align-content: flex-start; 
+}
+
+.album-info {
+   
 }
