Checkpoint Bloc Jams React Styling: Completed

--- a/src/App.css
+++ b/src/App.css
@@ -32,23 +32,23 @@ div.landing-tagline {
     display: block;
     height: 750px;
     width: 100%;
-    position: relative;
-    z-index: 1;
+    position: static;
+    padding-top: 50px;
     flex-direction: column;
 }
 
 
 #nav-bar {
-    position: fixed;
+    position: absolute;
     font-family: AvenirNext-medium;
     letter-spacing: 0.25px;
-    z-index: 2;
-    width: 99%;
+    width: 99%;     
 }
 
 
-.topleft {
+.top-left {
 /* SoundFusion: */
+    padding: 10px;
     font-family: AvenirNext-bold;
     font-size: 24px;
     width: 19%;
@@ -57,14 +57,16 @@ div.landing-tagline {
 }
 
 
-.topright {
+.top-right {
 /* Library: */
     font-family: AvenirNext-medium;
     font-size: 18px;
-    position: fixed;
+    padding-top: 10px;
     width: 99%;
+    position: absolute;
     float: right;
     text-align: right;
+    max-width: 950px;
 }
 
 
@@ -148,6 +150,20 @@ color: #5E5E5E;
     align-content: flex-start; 
 }
 
-.album-info {
-   
+.album {
+    position: fixed;
+    display: initial;
+    font-family: AvenirNext-medium;
+    color: #8E8D8E;
+    padding-top: 50px;
+    padding-right: 50px;
+    z-index: 1;
+}
+
+.playerbar-wrapper {
+    z-index: 1;
+    display: flex-inline;
+    position: fixed;
+    top: 40%;
+    left: 61%;
 }
