--- a/src/App.css
+++ b/src/App.css
@@ -6,26 +6,27 @@ div.wrapper {
 
 div.landing-tagline {
     position: absolute;
+    display: block;
     bottom: 35%;
     left: 66%;
     width: 100%;
     background-color: transparent;
     color: white;
-    display: flex;
+    
 }
 
 
-.landing-tagline-text {
+.dont-search, .just-listen{
+    position: static;
     display: block;
-    flex-direction: column;
     top: 55%;
     right: 0px;
     left: 70%;
-    margin: 0px;
+    line-height: 20px;
     font-size: 36px;
-    font-family: AvenirNext-bold;
-    letter-spacing: .50px;
+    font-family: AvenirNext-bold;   
 }
+
 
 .img {
     max-width: 100%;
@@ -45,7 +46,8 @@ div.landing-tagline {
     position: absolute;
     font-family: AvenirNext-medium;
     letter-spacing: 0.25px;
-    width: 99%;     
+    width: 99%; 
+    z-index: 1;
 }
 
 
@@ -107,30 +109,28 @@ color: #5E5E5E;
     color: rgba(142,141,142,0.87);
     letter-spacing: 0.25px;
     font-family: AvenirNext-medium;
-    display: flex;
-    flex-direction: row;
-    flex: 100%;
+    display: block;
     max-width: 33%;
+    z-index: -1;
 }
 
 
 .library-title {
-/* ALBUMS Discover a ne: */
+/* ALBUMS: */
     font-size: 28px;
-    display: flex;
-    flex-direction: column;
-    padding-top: 55%;
+    display: block;
+    padding-top: 50%;
     padding-left: 1%;
     padding-right: 66%;
     position: fixed; 
+    z-index: -1;
 }
 
 
 .library-text {
-/* ALBUMS Discover a ne: */
+/* Discover a ne: */
     font-size: 16px;
-    display: flex;
-    flex-direction: column;
+    display: block;
     padding-top: 60%;
     padding-left: 1%;
     padding-right: 66%;
@@ -148,7 +148,8 @@ color: #5E5E5E;
     right: 60%;
     position: absolute;
     height: 850px;
-    align-content: flex-start; 
+    align-content: flex-start;
+    z-index: -1;
 }
 
 .album {
@@ -158,7 +159,7 @@ color: #5E5E5E;
     color: #8E8D8E;
     padding-top: 50px;
     padding-right: 50px;
-    z-index: 1;
+    z-index: -1;
 }
 
 .playerbar-wrapper {
